--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "react": "18",
     "react-apexcharts": "1.4.1",
     "react-dom": "18",
-    "simplebar-react": "3.2.5",
-    "sharp": "0.32.6"
+    "sass": "^1.79.4",
+    "sharp": "0.32.6",
+    "simplebar-react": "3.2.5"
   },
   "devDependencies": {
     "@types/node": "20",
