--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@iconify/react": "4.1.1",
     "@tabler/icons-react": "3.5.0",
+    "axios": "^1.7.7",
     "flowbite": "2.3.0",
     "flowbite-react": "0.10.1",
     "lodash": "4.17.21",
